--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Inicio · Tu Nombre</title>
+  <title>Inicio · Galo Gordón</title>
   <meta name="description" content="Portafolio personal minimalista en negro y morado.">
   <meta name="theme-color" content="#7c3aed" />
   <link rel="icon" href="/assets/img/favicon.svg" type="image/svg+xml" />
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header class="site-header">
-  <a class="brand" href="/"><span class="dot">●</span>Tu Nombre</a>
+  <a class="brand" href="/"><span class="dot">●</span>Galo Gordón</a>
   <nav class="nav" data-active="inicio">
     <a href="/" data-page="inicio">Inicio</a>
     <a href="/sobre-mi.html" data-page="sobre-mi">Sobre mí</a>
@@ -25,7 +25,7 @@
 </header>
 
   <main class="container"><section class="hero">
-  <h1>Hola, soy <span class="grad">Tu Nombre</span></h1>
+  <h1>Hola, soy <span class="grad">Galo Gordón</span></h1>
   <p>Construyo cosas en la web. Me gustan las interfaces limpias, el rendimiento y el buen café.</p>
   <div class="hero-actions">
     <a class="btn" href="/sobre-mi.html">Saber más</a>
@@ -51,7 +51,7 @@
 </section>
 </main>
   <footer class="site-footer">
-    <p>© <span id="year"></span> Tu Nombre. Hecho con ♥. | <a href="https://github.com/" target="_blank" rel="noopener">GitHub</a></p>
+    <p>© <span id="year"></span> Galo Gordón. Hecho con ♥. | <a href="https://github.com/" target="_blank" rel="noopener">GitHub</a></p>
   </footer>
   <script src="/assets/js/main.js"></script>
   
